Made small change

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <h2 class="red">CONTACT ME</h2>
         <div class="row mt-5">
             <div class="col-md-4" style="font-size: 20px;">
-                <h5>Feel free to contact me. If you have any message for me or anything you want to ask, type it down here and i shall reply in no time :)</h5>
+                <h5>Feel free to contact me. If you have any message for me or anything you want to ask, type it down here and I shall reply in no time :)</h5>
                 <br>
                 <div class="row">
                     <div class="col-1 mt-3">
