Made links open in new tab

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                 <h3>A Student and web enthusiast</h3><br>
                 <h4 class="href" onclick="showAbout()">Want to know more about me?</h4>
                 <ul class="social list-unstyled pt-1 mb-5">
-                    <li class="facebook"><a title="Github" href="https://github.com/arjund-06"><i class="fa fa-github href"></i></a>
+                    <li class="facebook"><a title="Github" href="https://github.com/arjund-06" target="_blank"><i class="fa fa-github href"></i></a>
                     </li>
-                    <li class="youtube"><a title="Linkedin" href="https://www.linkedin.com/in/arjundave25/"><i class="fa fa-linkedin href"></i></a>
+                    <li class="youtube"><a title="Linkedin" href="https://www.linkedin.com/in/arjundave25/" target="_blank"><i class="fa fa-linkedin href"></i></a>
                     </li>
-                    <li class="dribbble"><a title="Instagram" href="https://www.instagram.com/arjund_06/"><i class="fa fa-instagram href"></i></a>
+                    <li class="dribbble"><a title="Instagram" href="https://www.instagram.com/arjund_06/" target="_blank"><i class="fa fa-instagram href"></i></a>
                     </li>
                 </ul>
             </div>
@@ -304,11 +304,11 @@
 
 
                 <ul class="social list-unstyled pt-1 mb-5 mt-3">
-                    <li class="facebook"><a title="Github" href="https://github.com/arjund-06"><i class="fa fa-github href"></i></a>
+                    <li class="facebook"><a title="Github" href="https://github.com/arjund-06" target="_blank"><i class="fa fa-github href"></i></a>
                     </li>
-                    <li class="youtube"><a title="Linkedin" href="https://www.linkedin.com/in/arjundave25/"><i class="fa fa-linkedin href"></i></a>
+                    <li class="youtube"><a title="Linkedin" href="https://www.linkedin.com/in/arjundave25/" target="_blank"><i class="fa fa-linkedin href"></i></a>
                     </li>
-                    <li class="dribbble"><a title="Instagram" href="https://www.instagram.com/arjund_06/"><i class="fa fa-instagram href"></i></a>
+                    <li class="dribbble"><a title="Instagram" href="https://www.instagram.com/arjund_06/" target="_blank"><i class="fa fa-instagram href"></i></a>
                     </li>
                 </ul>
             </div>
