--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </ul>
             </div>
             <div class="col-md-5 p-2">
-                <img src="pics/ArjunDave.jpg" alt="Prof" height="350px" id="prof">
+                <img src="pics/ArjunDave (2).jpg" alt="Prof" height="350px" id="prof">
             </div>
         </div>
     </div>
