--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
                     <li class="nav-item" onclick="showHome()">
-                        <a class="nav-link set-border" id="homeButton" aria-current="page" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">Home</a>
+                        <a class="nav-link set-border" id="homeButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">Home</a>
                     </li>
                     <li class="nav-item" onclick="showAbout()">
-                        <a class="nav-link" id="aboutButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">About</a>
+                        <a class="nav-link" id="aboutButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">About</a>
                     </li>
                     <li class="nav-item" onclick="showSkills()">
-                        <a class="nav-link" id="skillButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">My Skills</a>
+                        <a class="nav-link" id="skillButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">My Skills</a>
                     </li>
                     <li class="nav-item" onclick="showContact()">
-                        <a class="nav-link" id="contactButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">Contact Me</a>
+                        <a class="nav-link" id="contactButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -174,17 +174,17 @@
     <!-- Skills page -->
     <div class="container mt-5 hide" style="max-width: 1080px;" id="skills" #skills>
         <h2 class="red">MY SKILLS</h2>
-        <div class="row mx-auto" style="align-content: center;">
+        <div class="row mx-auto" style="align-content: center; text-align: center;">
             <!-- <div class="col-md-12" style="text-align: center; align-content: center;"> -->
             <div class="col my-4 mx-auto" id="my-skill">
                 <div class="card" style="width: 13rem;">
                     <img src="pics/Angular.png" class="card-img-top" alt="...">
                     <div class="card-body bg-dark">
                         <h3 style="color: crimson">Angular</h3>
-                        <div class="progress mt-2">
-                            <div class="progress-bar w-75 bg-danger" style="width:85%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress mt-3">
+                            <div class="progress-bar w-75 bg-danger" style="width:75%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text mt-2 text-white">85%</p>
+                        <!-- <p class="card-text mt-2 text-white">75%</p> -->
                     </div>
                 </div>
             </div>
@@ -194,10 +194,10 @@
                     <img src="pics/firebase.png" class="card-img-top" alt="...">
                     <div class="card-body bg-dark">
                         <h3 style="color: #FFA713;">Firebase</h3>
-                        <div class="progress mt-2">
+                        <div class="progress mt-3">
                             <div class="progress-bar" style="background-color: #FFA713; width: 80%;" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text mt-2 text-white">80%</p>
+                        <!-- <p class="card-text mt-2 text-white">80%</p> -->
                     </div>
                 </div>
             </div>
@@ -207,10 +207,10 @@
                     <img src="pics/Js.png" class="card-img-top" alt="...">
                     <div class="card-body bg-dark">
                         <h3 style="color: #F0DB4F;">JavaScript</h3>
-                        <div class="progress mt-2">
+                        <div class="progress mt-3">
                             <div class="progress-bar" style="background-color: #F0DB4F; width: 80%;" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text mt-2 text-white">80%</p>
+                        <!-- <p class="card-text mt-2 text-white">80%</p> -->
                     </div>
                 </div>
             </div>
@@ -220,10 +220,10 @@
                     <img src="pics/HTML.jpg" class="card-img-top" alt="...">
                     <div class="card-body bg-dark">
                         <h3 style="color:#DC4A23 ;">HTML</h3>
-                        <div class="progress mt-2">
-                            <div class="progress-bar" style="background-color: #DC4A23; width: 90%;" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress mt-3">
+                            <div class="progress-bar" style="background-color: #DC4A23; width: 80%;" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text mt-2 text-white">90%</p>
+                        <!-- <p class="card-text mt-2 text-white">80%</p> -->
                     </div>
                 </div>
             </div>
@@ -235,10 +235,10 @@
                     <img src="pics/css.svg" class="card-img-top" alt="...">
                     <div class="card-body bg-dark">
                         <h3 style="color:#1572B6 ;">CSS</h3>
-                        <div class="progress mt-2">
-                            <div class="progress-bar" style="background-color: #1572B6; width: 75%;" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress mt-3">
+                            <div class="progress-bar" style="background-color: #1572B6; width: 70%;" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text mt-2 text-white">75%</p>
+                        <!-- <p class="card-text mt-2 text-white">70%</p> -->
                     </div>
                 </div>
             </div>
@@ -248,10 +248,10 @@
                     <img src="pics/python.png" class="card-img-top" alt="...">
                     <div class="card-body bg-dark">
                         <h3 style="color:#4479A1 ;">Python</h3>
-                        <div class="progress mt-2">
-                            <div class="progress-bar" style="background-color: #4479A1; width: 85%;" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress mt-3">
+                            <div class="progress-bar" style="background-color: #4479A1; width: 65%;" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text mt-2 text-white">85%</p>
+                        <!-- <p class="card-text mt-2 text-white">65%</p> -->
                     </div>
                 </div>
             </div>
@@ -261,10 +261,10 @@
                     <img src="pics/SQL.png" class="card-img-top" alt="...">
                     <div class="card-body bg-dark">
                         <h3 style="color:#4479A1 ;">SQL</h3>
-                        <div class="progress mt-2">
+                        <div class="progress mt-3">
                             <div class="progress-bar" style="background-color: #4479A1; width: 50%;" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text mt-2 text-white">50%</p>
+                        <!-- <p class="card-text mt-2 text-white">50%</p> -->
                     </div>
                 </div>
             </div>
@@ -274,10 +274,10 @@
                     <img src="pics/flask.jpg" class="card-img-top" alt="...">
                     <div class="card-body bg-dark">
                         <h3 style="color:green ;">Flask</h3>
-                        <div class="progress mt-2">
-                            <div class="progress-bar" style="background-color:green; width: 70%;" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="progress mt-3">
+                            <div class="progress-bar" style="background-color:green; width: 50%;" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                        <p class="card-text mt-2 text-white">70%</p>
+                        <!-- <p class="card-text mt-2 text-white">50%</p> -->
                     </div>
                 </div>
             </div>
