--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <li class="nav-item" onclick="showSkills()">
                         <a class="nav-link" id="skillButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">My Skills</a>
                     </li>
+                    <!-- <li class="nav-item" onclick="showEvents()">
+                        <a class="nav-link" id="eventsButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">Events</a>
+                    </li> -->
                     <li class="nav-item" onclick="showContact()">
                         <a class="nav-link" id="contactButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">Contact Me</a>
                     </li>
@@ -286,7 +289,7 @@
     </div>
     <!-- Skills ends here -->
 
-    <div class="container mt-5 hide" id="contact">
+    <div class="container mt-5 hide" style="max-width: 1080px;" id="contact">
         <h2 class="red">CONTACT ME</h2>
         <div class="row mt-5">
             <div class="col-md-4" style="font-size: 20px;">
@@ -337,6 +340,11 @@
         </div>
     </div>
 
+    <div class="container mt-5 hide" style="max-width: 1080px;" id="events">
+        <h2 class="red">EVENTS</h2>
+        <div class="row p-3" id="eventsList"></div>
+    </div>
+
     <!-- Footer -->
     <div style="height: 35px;"></div>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
@@ -346,6 +354,25 @@
         })();
     </script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-firestore.js"></script>
+
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyCE4UKde_kTwHaDTuQS5YubsCIbNqSNKJQ",
+            authDomain: "simplelogin-e5759.firebaseapp.com",
+            databaseURL: "https://simplelogin-e5759.firebaseio.com",
+            projectId: "simplelogin-e5759",
+            storageBucket: "simplelogin-e5759.appspot.com",
+            messagingSenderId: "462404006182",
+            appId: "1:462404006182:web:d2f78f33e56d4daedf51e7"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        // var db = firebase.firestore();
+        // const firebase = initializeApp(firebaseConfig);
+    </script>
     <script src="app.js"></script>
 </body>
 
