--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- The Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="text-align: center; background-color: black;">
+    <!-- <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="text-align: center; background-color: black;">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,24 +23,24 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto">
                     <li class="nav-item" onclick="showHome()">
-                        <a class="nav-link set-border" id="homeButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">Home</a>
+                        <a class="nav-link set-border" href="#home" id="homeButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">Home</a>
                     </li>
                     <li class="nav-item" onclick="showAbout()">
-                        <a class="nav-link" id="aboutButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">About</a>
+                        <a class="nav-link" href="#about" id="aboutButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">About</a>
                     </li>
                     <li class="nav-item" onclick="showSkills()">
-                        <a class="nav-link" id="skillButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">My Skills</a>
+                        <a class="nav-link" href="#skills" id="skillButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">My Skills</a>
                     </li>
-                    <!-- <li class="nav-item" onclick="showEvents()">
+                    !-- <li class="nav-item" onclick="showEvents()">
                         <a class="nav-link" id="eventsButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">Events</a>
-                    </li> -->
+                    </li> --
                     <li class="nav-item" onclick="showContact()">
-                        <a class="nav-link" id="contactButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">Contact Me</a>
+                        <a class="nav-link" href="#contact" id="contactButton" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">Contact Me</a>
                     </li>
                 </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
     <!-- Navbar Ends here -->
 
     <!-- Home page -->
@@ -175,9 +175,9 @@
     <br>
 
     <!-- Skills page -->
-    <div class="container mt-5 hide" style="max-width: 1080px;" id="skills" #skills>
+    <div class="container mt-5 hide" id="skills" #skills>
         <h2 class="red">MY SKILLS</h2>
-        <div class="row mx-auto" style="align-content: center; text-align: center;">
+        <div class="row mx-auto" style="max-width: 1080px; align-content: center; text-align: center;">
             <!-- <div class="col-md-12" style="text-align: center; align-content: center;"> -->
             <div class="col my-4 mx-auto" id="my-skill">
                 <div class="card" style="width: 13rem;">
@@ -289,7 +289,7 @@
     </div>
     <!-- Skills ends here -->
 
-    <div class="container mt-5 hide" style="max-width: 1080px;" id="contact">
+    <div class="container mt-5 hide" id="contact" #contact>
         <h2 class="red">CONTACT ME</h2>
         <div class="row mt-5">
             <div class="col-md-4" style="font-size: 20px;">
@@ -340,10 +340,10 @@
         </div>
     </div>
 
-    <div class="container mt-5 hide" style="max-width: 1080px;" id="events">
+    <!-- <div class="container mt-5 hide" style="max-width: 1080px;" id="events">
         <h2 class="red">EVENTS</h2>
         <div class="row p-3" id="eventsList"></div>
-    </div>
+    </div> -->
 
     <!-- Footer -->
     <div style="height: 35px;"></div>
