Update college grade

--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
                     <div class="row">
                         <div class="col-md-12 mt-4">
                             <h3 class="red">SATHYABAMA INSTITUTE OF SCIENCE AND TECHNOLOGY, CHENNAI</h3>
-                            <h4 class="mt-3 red"> - <u>2020</u></h4>
+                            <h4 class="mt-3 red"> - <u>2023</u></h4>
 
 
-                            <h4><b><u> Semester Examination</u> - 3rd Semester</b> - <span class="red">9.2 CGPA</span></h4>
+                            <h4><b><u> Semester Examination</u> </b> - <span class="red">9.1 CGPA</span></h4>
                         </div>
                     </div>
                 </div>
